syntax = "proto3";

package whiteboard;

import "google/protobuf/empty.proto";

option go_package = "github.com/geektuhin123/whiteboard";

service Whiteboard {
  rpc AddDrawing(Drawing) returns (google.protobuf.Empty);
  rpc GetDrawings(google.protobuf.Empty) returns (stream Drawing);
  rpc ConnectUser(User) returns (google.protobuf.Empty);
  rpc DisconnectUser(User) returns (google.protobuf.Empty);
  rpc Undo(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Redo(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Draw(DrawRequest) returns (DrawResponse);
  rpc GetWhiteboard(google.protobuf.Empty) returns (GetWhiteboardResponse);
}

message Drawing {
  string id = 1;
  string user_id = 2;
  repeated Point points = 3;
}

message Point {
  float x = 1;
  float y = 2;
}

message User {
  string id = 1;
}

message GetWhiteboardResponse {
    repeated Stroke strokes = 1;
}

message Stroke {
  int32 id = 1;
  string color = 2;
  float line_width = 3;
  repeated Point points = 4;
}

message DrawRequest {
  string color = 1;
  float line_width = 2;
  repeated Point points = 3;
}

message DrawResponse {
  int32 id = 1;
}
